--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Code\Abstract\IGameState.cs" />
+     <Compile Include="Assets\Code\Scripts\EventHandler.cs" />
      <Compile Include="Assets\Code\Scripts\GameManager.cs" />
      <Compile Include="Assets\Code\Scripts\PlayerChar.cs" />
      <Compile Include="Assets\Code\States\MainMenuState.cs" />
