--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Code\Abstract\IGameState.cs" />
+    <Compile Include="Assets\Code\Scripts\CameraManager.cs" />
     <Compile Include="Assets\Code\Scripts\GameManager.cs" />
     <Compile Include="Assets\Code\Scripts\PlayerChar.cs" />
     <Compile Include="Assets\Code\Scripts\EventHandler.cs" />
