some lines and circles....

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,10 +53,12 @@
      <Compile Include="Assets\Code\Entities\Player.cs" />
      <Compile Include="Assets\Code\GameStack\Blocks\InfoBlock.cs" />
      <Compile Include="Assets\Code\GameStack\GameStack.cs" />
+     <Compile Include="Assets\Code\GameStack\Interrupts\IInterrupt.cs" />
      <Compile Include="Assets\Code\GameStack\Interrupts\InfoInterrupt.cs" />
      <Compile Include="Assets\Code\Scripts\CameraManager.cs" />
      <Compile Include="Assets\Code\Scripts\GameManager.cs" />
      <Compile Include="Assets\Code\Scripts\MouseHandler.cs" />
+     <Compile Include="Assets\Code\Scripts\PathTest.cs" />
      <Compile Include="Assets\Code\Scripts\StackManager.cs" />
      <Compile Include="Assets\Code\States\MainMenuState.cs" />
      <Compile Include="Assets\Code\States\PlayingGameState.cs" />
