--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -47,30 +47,37 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Code\Abstract\Art.cs" />
-     <Compile Include="Assets\Code\Abstract\IBlock.cs" />
-     <Compile Include="Assets\Code\Abstract\IGameState.cs" />
-     <Compile Include="Assets\Code\Abstract\IInputEventHandler.cs" />
+     <Compile Include="Assets\Code\Abstract\Interfaces\IBlock.cs" />
+     <Compile Include="Assets\Code\Abstract\Interfaces\IEvent.cs" />
+     <Compile Include="Assets\Code\Abstract\Interfaces\IGameObject.cs" />
+     <Compile Include="Assets\Code\Abstract\Interfaces\IGameState.cs" />
+     <Compile Include="Assets\Code\Abstract\Interfaces\IInputEventHandler.cs" />
+     <Compile Include="Assets\Code\Abstract\Interfaces\IInterrupt.cs" />
+     <Compile Include="Assets\Code\Abstract\Interfaces\IPlayerEventHandler.cs" />
+     <Compile Include="Assets\Code\Abstract\Interfaces\IPrefab.cs" />
      <Compile Include="Assets\Code\Abstract\MouseButton.cs" />
-     <Compile Include="Assets\Code\Delegates\Click.cs" />
-     <Compile Include="Assets\Code\Delegates\StackAction.cs" />
-     <Compile Include="Assets\Code\Entities\IEvent.cs" />
-     <Compile Include="Assets\Code\Entities\Path.cs" />
-     <Compile Include="Assets\Code\Entities\Player.cs" />
-     <Compile Include="Assets\Code\EventHandlers\CameraIEH.cs" />
-     <Compile Include="Assets\Code\EventHandlers\PathIEH.cs" />
-     <Compile Include="Assets\Code\EventHandlers\PlayerIEH.cs" />
+     <Compile Include="Assets\Code\Delegates\ClickTrigger.cs" />
+     <Compile Include="Assets\Code\Delegates\PlayerTrigger.cs" />
+     <Compile Include="Assets\Code\Delegates\StackTrigger.cs" />
      <Compile Include="Assets\Code\Events\InputEvent.cs" />
+     <Compile Include="Assets\Code\Events\PlayerEvent.cs" />
+     <Compile Include="Assets\Code\GameObjects\Cameras\CameraManager.cs" />
+     <Compile Include="Assets\Code\GameObjects\Cameras\Event Handlers\CameraInputEventHandler.cs" />
+     <Compile Include="Assets\Code\GameObjects\Path\Event Handlers\PathInputEventHandler.cs" />
+     <Compile Include="Assets\Code\GameObjects\Path\Path.cs" />
+     <Compile Include="Assets\Code\GameObjects\Path\PathPrefab.cs" />
+     <Compile Include="Assets\Code\GameObjects\Player\Event Handlers\PlayerInputEventHandler.cs" />
+     <Compile Include="Assets\Code\GameObjects\Player\Player.cs" />
+     <Compile Include="Assets\Code\GameObjects\SelectorHalo\Event Handlers\HaloInputEventHandler.cs" />
+     <Compile Include="Assets\Code\GameObjects\SelectorHalo\Event Handlers\HaloPlayerEventHandler.cs" />
+     <Compile Include="Assets\Code\GameObjects\SelectorHalo\SelectorHalo.cs" />
+     <Compile Include="Assets\Code\GameObjects\SelectorHalo\SelectorHaloPrefab.cs" />
      <Compile Include="Assets\Code\GameStack\Blocks\InfoBlock.cs" />
      <Compile Include="Assets\Code\GameStack\GameStack.cs" />
-     <Compile Include="Assets\Code\GameStack\Interrupts\IInterrupt.cs" />
      <Compile Include="Assets\Code\GameStack\Interrupts\InfoInterrupt.cs" />
-     <Compile Include="Assets\Code\Scripts\CameraManager.cs" />
+     <Compile Include="Assets\Code\GameStack\StackManager.cs" />
      <Compile Include="Assets\Code\Scripts\GameManager.cs" />
-     <Compile Include="Assets\Code\Scripts\PathPrefab.cs" />
      <Compile Include="Assets\Code\Scripts\PrefabFactory.cs" />
-     <Compile Include="Assets\Code\Scripts\SelectorHalo.cs" />
-     <Compile Include="Assets\Code\Scripts\SelectorHaloPrefab.cs" />
-     <Compile Include="Assets\Code\Scripts\StackManager.cs" />
      <Compile Include="Assets\Code\States\MainMenuState.cs" />
      <Compile Include="Assets\Code\States\PlayingGameState.cs" />
   </ItemGroup>
