--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -61,17 +61,16 @@
      <Compile Include="Assets\Code\Delegates\StackTrigger.cs" />
      <Compile Include="Assets\Code\Events\InputEvent.cs" />
      <Compile Include="Assets\Code\Events\PlayerEvent.cs" />
-     <Compile Include="Assets\Code\GameObjects\Cameras\CameraManager.cs" />
-     <Compile Include="Assets\Code\GameObjects\Cameras\Event Handlers\CameraInputEventHandler.cs" />
-     <Compile Include="Assets\Code\GameObjects\Path\Event Handlers\PathInputEventHandler.cs" />
-     <Compile Include="Assets\Code\GameObjects\Path\Path.cs" />
-     <Compile Include="Assets\Code\GameObjects\Path\PathPrefab.cs" />
-     <Compile Include="Assets\Code\GameObjects\PlayerCharacter\Event Handlers\PlayerInputEventHandler.cs" />
-     <Compile Include="Assets\Code\GameObjects\PlayerCharacter\Player.cs" />
-     <Compile Include="Assets\Code\GameObjects\SelectorHalo\Event Handlers\HaloInputEventHandler.cs" />
-     <Compile Include="Assets\Code\GameObjects\SelectorHalo\Event Handlers\HaloPlayerEventHandler.cs" />
-     <Compile Include="Assets\Code\GameObjects\SelectorHalo\SelectorHalo.cs" />
-     <Compile Include="Assets\Code\GameObjects\SelectorHalo\SelectorHaloPrefab.cs" />
+     <Compile Include="Assets\Code\GameObjects\_Cameras\CameraManager.cs" />
+     <Compile Include="Assets\Code\GameObjects\_Cameras\Event Handlers\CameraInputEventHandler.cs" />
+     <Compile Include="Assets\Code\GameObjects\_Halo\Event Handlers\HaloPlayerEventHandler.cs" />
+     <Compile Include="Assets\Code\GameObjects\_Halo\Halo.cs" />
+     <Compile Include="Assets\Code\GameObjects\_Halo\HaloPrefab.cs" />
+     <Compile Include="Assets\Code\GameObjects\_Path\Event Handlers\PathInputEventHandler.cs" />
+     <Compile Include="Assets\Code\GameObjects\_Path\Path.cs" />
+     <Compile Include="Assets\Code\GameObjects\_Path\PathPrefab.cs" />
+     <Compile Include="Assets\Code\GameObjects\_Player\Event Handlers\PlayerInputEventHandler.cs" />
+     <Compile Include="Assets\Code\GameObjects\_Player\Player.cs" />
      <Compile Include="Assets\Code\GameStack\Blocks\InfoBlock.cs" />
      <Compile Include="Assets\Code\GameStack\GameStack.cs" />
      <Compile Include="Assets\Code\GameStack\Interrupts\InfoInterrupt.cs" />
@@ -80,6 +79,7 @@
      <Compile Include="Assets\Code\Scripts\PrefabFactory.cs" />
      <Compile Include="Assets\Code\States\MainMenuState.cs" />
      <Compile Include="Assets\Code\States\PlayingGameState.cs" />
+     <Compile Include="Assets\Code\__SKELETONS _ DO NOT USE\InputEventHandler.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
