--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -69,6 +69,9 @@
      <Compile Include="Assets\Code\GameObjects\_Path\Event Handlers\PathInputEventHandler.cs" />
      <Compile Include="Assets\Code\GameObjects\_Path\Path.cs" />
      <Compile Include="Assets\Code\GameObjects\_Path\PathPrefab.cs" />
+     <Compile Include="Assets\Code\GameObjects\_Path\_PathSegment\PathLinePrefab.cs" />
+     <Compile Include="Assets\Code\GameObjects\_Path\_PathSegment\PathSegment.cs" />
+     <Compile Include="Assets\Code\GameObjects\_Path\_PathSegment\TurnCirclePrefab.cs" />
      <Compile Include="Assets\Code\GameObjects\_Player\Event Handlers\PlayerInputEventHandler.cs" />
      <Compile Include="Assets\Code\GameObjects\_Player\Player.cs" />
      <Compile Include="Assets\Code\GameStack\Blocks\InfoBlock.cs" />
