Oops... saving is fun.

--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -1,90 +1,89 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>10.0.20506</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{6062397C-40E8-7D21-4679-32FE0AB5B691}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>
-    </RootNamespace>
-    <AssemblyName>Assembly-CSharp</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <BaseDirectory>Assets</BaseDirectory>
+	<Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
+	<Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
+	<ProductVersion>10.0.20506</ProductVersion>
+	<SchemaVersion>2.0</SchemaVersion>
+	<ProjectGuid>{6062397C-40E8-7D21-4679-32FE0AB5B691}</ProjectGuid>
+	<OutputType>Library</OutputType>
+	<AppDesignerFolder>Properties</AppDesignerFolder>
+	<RootNamespace></RootNamespace>
+	<AssemblyName>Assembly-CSharp</AssemblyName>
+	<TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+	<FileAlignment>512</FileAlignment>
+	<BaseDirectory>Assets</BaseDirectory>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>Temp\bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE;UNITY_4_5_2;UNITY_4_5;UNITY_STANDALONE_WIN;ENABLE_MICROPHONE;ENABLE_TEXTUREID_MAP;ENABLE_UNITYEVENTS;ENABLE_NEW_HIERARCHY ;ENABLE_AUDIO_FMOD;UNITY_STANDALONE;ENABLE_MONO;ENABLE_TERRAIN;ENABLE_SUBSTANCE;ENABLE_GENERICS;INCLUDE_WP8SUPPORT;ENABLE_MOVIES;ENABLE_WWW;ENABLE_IMAGEEFFECTS;ENABLE_WEBCAM;INCLUDE_METROSUPPORT;RENDER_SOFTWARE_CURSOR;ENABLE_NETWORK;ENABLE_PHYSICS;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_2D_PHYSICS;ENABLE_SHADOWS;ENABLE_AUDIO;ENABLE_NAVMESH_CARVING;ENABLE_DUCK_TYPING;ENABLE_SINGLE_INSTANCE_BUILD_SETTING;ENABLE_PROFILER;UNITY_EDITOR;UNITY_EDITOR_WIN;UNITY_TEAM_LICENSE;UNITY_PRO_LICENSE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <NoWarn>0169</NoWarn>
+	<DebugSymbols>true</DebugSymbols>
+	<DebugType>full</DebugType>
+	<Optimize>false</Optimize>
+	<OutputPath>Temp\bin\Debug\</OutputPath>
+	<DefineConstants>DEBUG;TRACE;UNITY_4_5_2;UNITY_4_5;UNITY_STANDALONE_WIN;ENABLE_MICROPHONE;ENABLE_TEXTUREID_MAP;ENABLE_UNITYEVENTS;ENABLE_NEW_HIERARCHY ;ENABLE_AUDIO_FMOD;UNITY_STANDALONE;ENABLE_MONO;ENABLE_TERRAIN;ENABLE_SUBSTANCE;ENABLE_GENERICS;INCLUDE_WP8SUPPORT;ENABLE_MOVIES;ENABLE_WWW;ENABLE_IMAGEEFFECTS;ENABLE_WEBCAM;INCLUDE_METROSUPPORT;RENDER_SOFTWARE_CURSOR;ENABLE_NETWORK;ENABLE_PHYSICS;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_2D_PHYSICS;ENABLE_SHADOWS;ENABLE_AUDIO;ENABLE_NAVMESH_CARVING;ENABLE_DUCK_TYPING;ENABLE_SINGLE_INSTANCE_BUILD_SETTING;ENABLE_PROFILER;UNITY_EDITOR;UNITY_EDITOR_WIN;UNITY_TEAM_LICENSE;UNITY_PRO_LICENSE</DefineConstants>
+	<ErrorReport>prompt</ErrorReport>
+	<WarningLevel>4</WarningLevel>
+	<NoWarn>0169</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>Temp\bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <NoWarn>0169</NoWarn>
+	<DebugType>pdbonly</DebugType>
+	<Optimize>true</Optimize>
+	<OutputPath>Temp\bin\Release\</OutputPath>
+	<DefineConstants>TRACE</DefineConstants>
+	<ErrorReport>prompt</ErrorReport>
+	<WarningLevel>4</WarningLevel>
+	<NoWarn>0169</NoWarn>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
+	<Reference Include="System" />
     <Reference Include="System.XML" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="UnityEngine">
-      <HintPath>C:/Program Files (x86)/Unity/Editor/Data/Managed/UnityEngine.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEditor">
-      <HintPath>C:/Program Files (x86)/Unity/Editor/Data/Managed/UnityEditor.dll</HintPath>
-    </Reference>
+	<Reference Include="System.Core" />
+	<Reference Include="System.Xml.Linq" />
+	<Reference Include="UnityEngine">
+	  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/Managed/UnityEngine.dll</HintPath>
+	</Reference>
+	<Reference Include="UnityEditor">
+	  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/Managed/UnityEditor.dll</HintPath>
+	</Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Code\Abstract\Art.cs" />
-    <Compile Include="Assets\Code\Abstract\DaveMath.cs" />
-    <Compile Include="Assets\Code\Abstract\Extensions.cs" />
-    <Compile Include="Assets\Code\Abstract\Interfaces\IBlock.cs" />
-    <Compile Include="Assets\Code\Abstract\Interfaces\IEvent.cs" />
-    <Compile Include="Assets\Code\Abstract\Interfaces\IGameObject.cs" />
-    <Compile Include="Assets\Code\Abstract\Interfaces\IGameState.cs" />
-    <Compile Include="Assets\Code\Abstract\Interfaces\IInputEventHandler.cs" />
-    <Compile Include="Assets\Code\Abstract\Interfaces\IInterrupt.cs" />
-    <Compile Include="Assets\Code\Abstract\Interfaces\IPlayerEventHandler.cs" />
-    <Compile Include="Assets\Code\Abstract\Interfaces\IPrefab.cs" />
-    <Compile Include="Assets\Code\Abstract\MouseButton.cs" />
-    <Compile Include="Assets\Code\Delegates\ClickTrigger.cs" />
-    <Compile Include="Assets\Code\Delegates\PlayerTrigger.cs" />
-    <Compile Include="Assets\Code\Delegates\StackTrigger.cs" />
-    <Compile Include="Assets\Code\Events\InputEvent.cs" />
-    <Compile Include="Assets\Code\Events\PlayerEvent.cs" />
-    <Compile Include="Assets\Code\GameObjects\_Cameras\CameraManager.cs" />
-    <Compile Include="Assets\Code\GameObjects\_Cameras\Event Handlers\CameraInputEventHandler.cs" />
-    <Compile Include="Assets\Code\GameObjects\_Halo\Event Handlers\HaloPlayerEventHandler.cs" />
-    <Compile Include="Assets\Code\GameObjects\_Halo\Halo.cs" />
-    <Compile Include="Assets\Code\GameObjects\_Halo\HaloPrefab.cs" />
-    <Compile Include="Assets\Code\GameObjects\_Path\Event Handlers\PathInputEventHandler.cs" />
-    <Compile Include="Assets\Code\GameObjects\_Path\Path.cs" />
-    <Compile Include="Assets\Code\GameObjects\_Path\_PathSegment\PathLinePrefab.cs" />
-    <Compile Include="Assets\Code\GameObjects\_Path\_PathSegment\PathSegment.cs" />
-    <Compile Include="Assets\Code\GameObjects\_Path\_PathSegment\PathCirclePrefab.cs" />
-    <Compile Include="Assets\Code\GameObjects\_Player\Event Handlers\PlayerInputEventHandler.cs" />
-    <Compile Include="Assets\Code\GameObjects\_Player\Player.cs" />
-    <Compile Include="Assets\Code\GameStack\Blocks\InfoBlock.cs" />
-    <Compile Include="Assets\Code\GameStack\GameStack.cs" />
-    <Compile Include="Assets\Code\GameStack\Interrupts\InfoInterrupt.cs" />
-    <Compile Include="Assets\Code\GameStack\StackManager.cs" />
-    <Compile Include="Assets\Code\Scripts\GameManager.cs" />
-    <Compile Include="Assets\Code\Scripts\PrefabFactory.cs" />
-    <Compile Include="Assets\Code\States\MainMenuState.cs" />
-    <Compile Include="Assets\Code\States\PlayingGameState.cs" />
-    <Compile Include="Assets\Code\__SKELETONS _ DO NOT USE\InputEventHandler.cs" />
+     <Compile Include="Assets\Code\Abstract\Art.cs" />
+     <Compile Include="Assets\Code\Abstract\DaveMath.cs" />
+     <Compile Include="Assets\Code\Abstract\Extensions.cs" />
+     <Compile Include="Assets\Code\Abstract\Interfaces\IBlock.cs" />
+     <Compile Include="Assets\Code\Abstract\Interfaces\IEvent.cs" />
+     <Compile Include="Assets\Code\Abstract\Interfaces\IGameObject.cs" />
+     <Compile Include="Assets\Code\Abstract\Interfaces\IGameState.cs" />
+     <Compile Include="Assets\Code\Abstract\Interfaces\IInputEventHandler.cs" />
+     <Compile Include="Assets\Code\Abstract\Interfaces\IInterrupt.cs" />
+     <Compile Include="Assets\Code\Abstract\Interfaces\IPlayerEventHandler.cs" />
+     <Compile Include="Assets\Code\Abstract\Interfaces\IPrefab.cs" />
+     <Compile Include="Assets\Code\Abstract\MouseButton.cs" />
+     <Compile Include="Assets\Code\Delegates\ClickTrigger.cs" />
+     <Compile Include="Assets\Code\Delegates\PlayerTrigger.cs" />
+     <Compile Include="Assets\Code\Delegates\StackTrigger.cs" />
+     <Compile Include="Assets\Code\Events\InputEvent.cs" />
+     <Compile Include="Assets\Code\Events\PlayerEvent.cs" />
+     <Compile Include="Assets\Code\GameObjects\_Cameras\CameraManager.cs" />
+     <Compile Include="Assets\Code\GameObjects\_Cameras\Event Handlers\CameraInputEventHandler.cs" />
+     <Compile Include="Assets\Code\GameObjects\_Halo\Event Handlers\HaloPlayerEventHandler.cs" />
+     <Compile Include="Assets\Code\GameObjects\_Halo\Halo.cs" />
+     <Compile Include="Assets\Code\GameObjects\_Halo\HaloPrefab.cs" />
+     <Compile Include="Assets\Code\GameObjects\_Path\Event Handlers\PathInputEventHandler.cs" />
+     <Compile Include="Assets\Code\GameObjects\_Path\Path.cs" />
+     <Compile Include="Assets\Code\GameObjects\_Path\_PathSegment\PathCirclePrefab.cs" />
+     <Compile Include="Assets\Code\GameObjects\_Path\_PathSegment\PathLinePrefab.cs" />
+     <Compile Include="Assets\Code\GameObjects\_Path\_PathSegment\PathSegment.cs" />
+     <Compile Include="Assets\Code\GameObjects\_Player\Event Handlers\PlayerInputEventHandler.cs" />
+     <Compile Include="Assets\Code\GameObjects\_Player\Player.cs" />
+     <Compile Include="Assets\Code\GameStack\Blocks\InfoBlock.cs" />
+     <Compile Include="Assets\Code\GameStack\GameStack.cs" />
+     <Compile Include="Assets\Code\GameStack\Interrupts\InfoInterrupt.cs" />
+     <Compile Include="Assets\Code\GameStack\StackManager.cs" />
+     <Compile Include="Assets\Code\Scripts\GameManager.cs" />
+     <Compile Include="Assets\Code\Scripts\PrefabFactory.cs" />
+     <Compile Include="Assets\Code\States\MainMenuState.cs" />
+     <Compile Include="Assets\Code\States\PlayingGameState.cs" />
+     <Compile Include="Assets\Code\__SKELETONS _ DO NOT USE\InputEventHandler.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
@@ -94,4 +93,5 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  
 </Project>
